# Titan

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  pyproject.toml  serve.py
capability/mcp/: decorator.py  tool.py
collab/intent/: protocol.py
core/: __init__.py
core/agents/: base.py
core/brain/: engine.py
core/factory/: base.py
core/model/: adapter.py  parser.py
core/prompt/: builder.py
core/schema/: registry.py
core/session/: manager.py
core/solidify/: engine.py
core/stream/: events.py  response.py
core/trust/: model.py
core/verify/: pipeline.py
docs/: architecture.md  philosophy.md  quick-start.md
templates/customer-service/: titan.yaml
templates/data-analysis/: titan.yaml
templates/devops/: titan.yaml
templates/hr/: titan.yaml
templates/hr/mock_data/: employees.json  payroll.json  performance.json  recruitment.json
templates/hr/tools/: common.py  employee.py  onboarding.py  payroll.py  recruitment.py  training.py
templates/security/: titan.yaml
titan_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ui/: components.py
ui/static/: index.html
